--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <strong>Privacy Policy</strong>
     <p>
-      Youngjin Ha built the WEDO app as a Commercial app. This SERVICE is
+      Youngjin Ha built the WEDO mobile app as a Commercial app. This SERVICE is
       provided by Youngjin Ha and is intended for use as is.
     </p>
     <p>
