fix luna privacy policy

--- a/luna.html
+++ b/luna.html
@@ -71,6 +71,70 @@
         </li>
       </ul>
     </div>
+    <p>
+      For a better experience, while using our Service, we may require you to
+      provide us with certain personally identifiable information and
+      health-related data, including but not limited to:
+    </p>
+    <ul>
+      <li>Total Calories Burned</li>
+      <li>Steps</li>
+      <li>Exercise Data</li>
+      <li>Active Calories Burned</li>
+      <li>Distance</li>
+    </ul>
+    <p>
+      The information that we request will be retained by us and used as
+      described in this privacy policy. This data helps us provide personalized
+      fitness insights, track progress, and improve app features.
+    </p>
+
+    <p><strong>Health Data Collection and Use</strong></p>
+    <p>
+      Our app collects health-related data to provide personalized fitness
+      tracking and insights. Specifically, we may access and use the following
+      types of health data:
+    </p>
+    <ul>
+      <li>
+        Total Calories Burned: App users can accumulate total running distance
+        and calories through "Health Connect" workout data. To retrieve the
+        cumulative calorie consumption data, the corresponding data is required.
+      </li>
+      <li>
+        Steps: App users can accumulate total running distance and calories
+        through "Health Connect" workout data. To retrieve the cumulative
+        running distance data, the corresponding data is required.
+      </li>
+      <li>
+        Exercise Data: App users can accumulate total running distance and
+        calories through "Health Connect" workout data. To retrieve the
+        cumulative calorie consumption and running distance data, the
+        corresponding data is required.
+      </li>
+      <li>
+        Active Calories Burned: App users can accumulate total running distance
+        and calories through "Health Connect" workout data. To retrieve the
+        cumulative calorie consumption data, the corresponding data is required.
+      </li>
+      <li>
+        Distance: App users can accumulate total running distance and calories
+        through "Health Connect" workout data. To retrieve the cumulative
+        running distance data, the corresponding data is required.
+      </li>
+    </ul>
+    <p>
+      This data is used solely for the purpose of providing and improving
+      fitness tracking features in the app. It is not shared with third parties
+      except as necessary to deliver these features (e.g., syncing with external
+      fitness platforms) or as required by law.
+    </p>
+    <p>
+      You can choose to allow or deny access to this data through your device’s
+      permission settings. However, denying access may limit certain features of
+      the app.
+    </p>
+
     <p><strong>Log Data</strong></p>
     <p>
       We want to inform you that whenever you use our Service, in a case of an
@@ -119,6 +183,11 @@
       remember that no method of transmission over the internet, or method of
       electronic storage is 100% secure and reliable, and we cannot guarantee
       its absolute security.
+    </p>
+    <p>
+      We take the security of your health data seriously. We use commercially
+      acceptable methods to protect this data. However, no system can guarantee
+      absolute security, and you use the service at your own risk.
     </p>
     <p><strong>Links to Other Sites</strong></p>
     <p>
