--- a/luna-term.html
+++ b/luna-term.html
@@ -16,9 +16,9 @@
     <p>
       By downloading or using the app, these terms will automatically apply to
       you – you should make sure therefore that you read them carefully before
-      using the app. You’re not allowed to copy or modify the app, any part of
-      the app, or our trademarks in any way. You’re not allowed to attempt to
-      extract the source code of the app, and you also shouldn’t try to
+      using the app. You're not allowed to copy or modify the app, any part of
+      the app, or our trademarks in any way. You're not allowed to attempt to
+      extract the source code of the app, and you also shouldn't try to
       translate the app into other languages or make derivative versions. The
       app itself, and all the trademarks, copyright, database rights, and other
       intellectual property rights related to it, still belong to Mission
@@ -29,17 +29,17 @@
       efficient as possible. For that reason, we reserve the right to make
       changes to the app or to charge for its services, at any time and for any
       reason. We will never charge you for the app or its services without
-      making it very clear to you exactly what you’re paying for.
+      making it very clear to you exactly what you're paying for.
     </p>
     <p>
       The LUNA app stores and processes personal data that you have provided to
-      us, to provide our Service. It’s your responsibility to keep your phone
+      us, to provide our Service. It's your responsibility to keep your phone
       and access to the app secure. We therefore recommend that you do not
       jailbreak or root your phone, which is the process of removing software
       restrictions and limitations imposed by the official operating system of
       your device. It could make your phone vulnerable to
-      malware/viruses/malicious programs, compromise your phone’s security
-      features and it could mean that the LUNA app won’t work properly or at
+      malware/viruses/malicious programs, compromise your phone's security
+      features and it could mean that the LUNA app won't work properly or at
       all.
     </p>
     <div>
@@ -77,31 +77,31 @@
       require the app to have an active internet connection. The connection can
       be Wi-Fi or provided by your mobile network provider, but Mission fingers
       cannot take responsibility for the app not working at full functionality
-      if you don’t have access to Wi-Fi, and you don’t have any of your data
+      if you don't have access to Wi-Fi, and you don't have any of your data
       allowance left.
     </p>
     <p></p>
     <p>
-      If you’re using the app outside of an area with Wi-Fi, you should remember
+      If you're using the app outside of an area with Wi-Fi, you should remember
       that the terms of the agreement with your mobile network provider will
       still apply. As a result, you may be charged by your mobile provider for
       the cost of data for the duration of the connection while accessing the
-      app, or other third-party charges. In using the app, you’re accepting
+      app, or other third-party charges. In using the app, you're accepting
       responsibility for any such charges, including roaming data charges if you
       use the app outside of your home territory (i.e. region or country)
       without turning off data roaming. If you are not the bill payer for the
-      device on which you’re using the app, please be aware that we assume that
+      device on which you're using the app, please be aware that we assume that
       you have received permission from the bill payer for using the app.
     </p>
     <p>
       Along the same lines, Mission fingers cannot always take responsibility
       for the way you use the app i.e. You need to make sure that your device
-      stays charged – if it runs out of battery and you can’t turn it on to
+      stays charged – if it runs out of battery and you can't turn it on to
       avail the Service, Mission fingers cannot accept responsibility.
     </p>
     <p>
-      With respect to Mission fingers’s responsibility for your use of the app,
-      when you’re using the app, it’s important to bear in mind that although we
+      With respect to Mission fingers's responsibility for your use of the app,
+      when you're using the app, it's important to bear in mind that although we
       endeavor to ensure that it is updated and correct at all times, we do rely
       on third parties to provide information to us so that we can make it
       available to you. Mission fingers accepts no liability for any loss,
@@ -112,7 +112,7 @@
       At some point, we may wish to update the app. The app is currently
       available on iOS – the requirements for the both systems(and for any
       additional systems we decide to extend the availability of the app to) may
-      change, and you’ll need to download the updates if you want to keep using
+      change, and you'll need to download the updates if you want to keep using
       the app. Mission fingers does not promise that it will always update the
       app so that it is relevant to you and/or works with the iOS version that
       you have installed on your device. However, you promise to always accept
@@ -130,6 +130,21 @@
       you of any changes by posting the new Terms and Conditions on this page.
     </p>
     <p>These terms and conditions are effective as of 2023-01-03</p>
+
+    <p><strong>Refund Policy</strong></p>
+    <p>
+      For Challenge Deposits:<br />
+      Once a challenge has started, refunds cannot be processed upon request.
+      You can receive a full refund of your deposit by successfully completing
+      the challenge.
+    </p>
+    <p>
+      For In-App Purchases:<br />
+      Refunds for in-app purchases must be requested through the App Store (iOS)
+      or Google Play Store (Android). These refunds are processed according to
+      their respective store policies.
+    </p>
+
     <p><strong>Contact Us</strong></p>
     <p>
       If you have any questions or suggestions about our Terms and Conditions,
